Bug 1409677 - Adjust kCommonAliasedLineWidthRangeMax to 1 in WebGL resistFingerprint mode; r=cfu,jgilbert

MozReview-Commit-ID: 4gusUhU9VMI